[backend]: need fix for llm_endpoint
