# backend/internal/dashboard/handlers/graph.go
@@ -1,6 +1,8 @@
 package handlers
 
 import (
+	"strconv"
+
 	authModels "github.com/EgorTarasov/example/internal/auth/models"
 	"github.com/EgorTarasov/example/internal/dashboard/models"
 	"github.com/gofiber/fiber/v2"
@@ -60,100 +62,139 @@ func (h *handler) GetDashboardById(c *fiber.Ctx) error {
 
 }
 
-// func (h *handler) GetPipelineById(c *fiber.Ctx) error {
+func (h *handler) GetPipelineById(c *fiber.Ctx) error {
 
-// 	idStr := c.Params("id")
-// 	id, err := strconv.ParseInt(idStr, 10, 64)
-// 	if err != nil {
-// 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "invalid id"})
-// 	}
+	idStr := c.Params("id")
+	id, err := strconv.ParseInt(idStr, 10, 64)
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "invalid id"})
+	}
 
-// 	pipelineDto, err := h.s.GetPipelineById(c.Context(), id)
-// 	if err != nil {
-// 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
-// 	}
-// 	pipeline := pipelineDto.ToPipeLine()
-// 	return c.JSON(pipeline)
+	pipelineDto, err := h.s.GetPipelineById(c.Context(), id)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+	pipeline := pipelineDto.ToPipeLine()
+	return c.JSON(pipeline)
 
-// }
+}
 
-// func (h *handler) CreateInputBlock(c *fiber.Ctx) error {
-// 	var payload models.CreateInputBlock
-// 	if err := c.BodyParser(&payload); err != nil {
-// 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "invalid payload"})
-// 	}
+// CreatePipeline godoc
+// @Summary Create a new input block
+// @Description Create a new input block for the authenticated user
+// @Tags pipelines
+// @Accept json
+// @Produce json
+// @Param payload body models.CreateInputBlock true "Create Input Block Payload"
+// @Success 201 {object} map[string]interface{} "id"
+// @Failure 400 {object} map[string]interface{} "error"
+// @Failure 500 {object} map[string]interface{} "error"
+// @Router /api/dashboard/inputblock [post]
+// @Security BearerAuth
+func (h *handler) CreateInputBlock(c *fiber.Ctx) error {
+	var payload models.CreateInputBlock
+	if err := c.BodyParser(&payload); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "invalid payload"})
+	}
 
-// 	id, err := h.s.CreateInputBlock(c.Context(), payload)
-// 	if err := c.BodyParser(&payload); err != nil {
-// 		return c.SendStatus(fiber.StatusUnprocessableEntity)
-// 	}
-// 	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"id": id})
+	id, err := h.s.CreateInputBlock(c.Context(), payload)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
 
-// }
+	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"id": id})
+}
 
-// func (h *handler) CreateDataBlock(c *fiber.Ctx) error {
-// 	var payload models.CreateDataBlock
-// 	if err := c.BodyParser(&payload); err != nil {
-// 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "invalid payload"})
-// 	}
+// CreatePipeline godoc
+// @Summary Create a new input block
+// @Description Create a new input block for the authenticated user
+// @Tags pipelines
+// @Accept json
+// @Produce json
+// @Param payload body models.CreateInputBlock true "Create Input Block Payload"
+// @Success 201 {object} map[string]interface{} "id"
+// @Failure 400 {object} map[string]interface{} "error"
+// @Failure 500 {object} map[string]interface{} "error"
+// @Router /api/dashboard/inputblock [post]
+// @Security BearerAuth
+func (h *handler) CreateDataBlock(c *fiber.Ctx) error {
+	var payload models.CreateDataBlock
+	if err := c.BodyParser(&payload); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "invalid payload"})
+	}
 
-// 	id, err := h.s.CreateDataBlock(c.Context(), payload)
+	id, err := h.s.CreateDataBlock(c.Context(), payload)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
 
-// 	if err := c.BodyParser(&payload); err != nil {
-// 		return c.SendStatus(fiber.StatusUnprocessableEntity)
-// 	}
-// 	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"id": id})
+	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"id": id})
+}
 
-// }
+// CreatePipeline godoc
+// @Summary Create a new input block
+// @Description Create a new input block for the authenticated user
+// @Tags pipelines
+// @Accept json
+// @Produce json
+// @Param payload body models.CreateInputBlock true "Create Input Block Payload"
+// @Success 201 {object} map[string]interface{} "id"
+// @Failure 400 {object} map[string]interface{} "error"
+// @Failure 500 {object} map[string]interface{} "error"
+// @Router /api/dashboard/inputblock [post]
+// @Security BearerAuth
+func (h *handler) CreateWidgetBlock(c *fiber.Ctx) error {
+	var payload models.CreateWidgetBlock
+	if err := c.BodyParser(&payload); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "invalid payload"})
+	}
 
-// func (h *handler) CreateWidgetBlock(c *fiber.Ctx) error {
-// 	var (
-// 		payload  models.CreateWidgetBlock
-// 		response models.WidgetBlockDto
-// 	)
+	id, err := h.s.CreateWidgetBlock(c.Context(), payload)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
 
-// 	if err := c.BodyParser(&payload); err != nil {
-// 		return c.SendStatus(fiber.StatusUnprocessableEntity)
-// 	}
-// 	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"id": id})
+	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"id": id})
+}
 
-// }
+func (h *handler) CreateTextSplitter(c *fiber.Ctx) error {
+	var payload models.CreateTextSplitter
+	if err := c.BodyParser(&payload); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "invalid payload"})
+	}
 
-// func (h *handler) CreateTextSplitter(c *fiber.Ctx) error {
-// 	var (
-// 		payload  models.CreateWidgetBlock
-// 		response models.WidgetBlockDto
-// 	)
+	id, err := h.s.CreateTextSplitter(c.Context(), payload)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
 
-// 	if err := c.BodyParser(&payload); err != nil {
-// 		return c.SendStatus(fiber.StatusUnprocessableEntity)
-// 	}
-// 	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"id": id})
+	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"id": id})
+}
 
-// }
+func (h *handler) CreateVectorStore(c *fiber.Ctx) error {
+	var payload models.CreateVectorStore
+	if err := c.BodyParser(&payload); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "invalid payload"})
+	}
 
-// func (h *handler) CreateVectorStore(c *fiber.Ctx) error {
-// 	var (
-// 		payload  models.CreateWidgetBlock
-// 		response models.WidgetBlockDto
-// 	)
+	id, err := h.s.CreateVectorStore(c.Context(), payload)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
 
-// 	if err := c.BodyParser(&payload); err != nil {
-// 		return c.SendStatus(fiber.StatusUnprocessableEntity)
-// 	}
-// 	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"id": id})
+	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"id": id})
+}
 
-// }
+func (h *handler) CreateLLMBlock(c *fiber.Ctx) error {
+	var payload models.CreateLLMBlock
+	if err := c.BodyParser(&payload); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "invalid payload"})
+	}
 
-// func (h *handler) CreateLLMBlock(c *fiber.Ctx) error {
-// 	var (
-// 		payload  models.CreateLLMBlock
-// 		response models.LLMDto
-// 	)
+	id, err := h.s.CreateLLMBlock(c.Context(), payload)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
 
-// 	if err := c.BodyParser(&payload); err != nil {
-// 		return c.SendStatus(fiber.StatusUnprocessableEntity)
-// 	}
-// 	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"id": id})
-
-// }
+	return c.Status(fiber.StatusCreated).JSON(fiber.Map{"id": id})
+}
