# backend/internal/docs/swagger.yaml
@@ -29,6 +29,15 @@ definitions:
       type:
         type: string
     type: object
+  models.CreateInputBlock:
+    properties:
+      data_block_id:
+        type: integer
+      llm_id:
+        type: integer
+      pipeline_id:
+        type: integer
+    type: object
   models.CreatePipeLine:
     properties:
       description:
@@ -54,7 +63,7 @@ definitions:
       user_id:
         type: integer
     type: object
-host: larek.tech
+host: localhost:9999
 info:
   contact:
     email: fiber@swagger.io
@@ -163,6 +172,41 @@ paths:
       summary: Retrieve a dashboard by its ID
       tags:
       - dashboards
+  /api/dashboard/inputblock:
+    post:
+      consumes:
+      - application/json
+      description: Create a new input block for the authenticated user
+      parameters:
+      - description: Create Input Block Payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateInputBlock'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: id
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Create a new input block
+      tags:
+      - pipelines
   /api/dashboard/pipeline:
     post:
       consumes:
